--- a/resources/css/axure_rp_page.css
+++ b/resources/css/axure_rp_page.css
@@ -97,7 +97,9 @@ div.intcases {
     position:absolute;
     padding: 0px;
     border-radius: 3px;
-    white-space: nowrap;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+    max-width: 250px;
 }
 
 div.intcaselink {
