--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -859,7 +859,8 @@ input[type=text]::-ms-clear {
 .pluginNameHeader {
     font-size: 16px;
     font-weight: bold;
-    /*color: #6d6d6d;*/
+    flex: 1;
+    margin-left: 4px;
 }
 
 .mobileMode .pluginNameHeader {
